# a2-memory-map

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README-crate.md  README.md  package-lock.json  package.json  tsconfig.json
.github/: README.md  node.js.yml
.github/workflows/: node.js.yml  rust.yml
bindings/rust/: lib.rs
script/: formatAddresses.py  verifyAddresses.py
src/: index.ts  map.json  map.schema.json
src/test/suite/: get_split.test.ts  index.ts  validate_map.test.ts
