[package]
name = "a2-memory-map"
description = "Database of Apple II memory addresses"
version = "1.0.4"
keywords = ["retro", "apple"]
categories = []
repository = "https://github.com/dfgordon/a2-memory-map"
homepage = "https://github.com/dfgordon/a2-memory-map"
readme = "README-crate.md"
edition = "2021"
license = "MIT"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
serde_json = "1.0.116"
